--- a/education.html
+++ b/education.html
@@ -64,7 +64,7 @@
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <img id="unc" class="col-11 col-sm-8 col-lg-6" src="unc_logo.png" onMouseDown="popupMsg('Unable to access image')">
-                <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry Minor, Neuroscience Minor</h5>
+                <h5 class="col-12 col-sm-12 e-co text-center">Bachelor of Science - B.S. Biology, Chemistry & Neuroscience Minors</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2018 - May 2022</i></p>
                 <p class="col-12 col-sm-12 e-location text-center">Chapel Hill, North Carolina</p>
             </article>
@@ -81,7 +81,7 @@
                 <img id="scc" class="col-11 col-sm-6 col-lg-4" src="ecu_logo.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>May 2021 - June 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Human Genetics, General Physics II</p>
+                <p class="col-12 col-sm-12 e-location text-center">Human Genetics / General Physics II</p>
             </article>
             <article class="col-12 col-sm-12 col-lg-4 e-about">
                 <img id="scc" class="col-11 col-sm-6 col-lg-4" src="sandhillscc_logo.png" onMouseDown="popupMsg('Unable to access image')">
@@ -99,7 +99,8 @@
                 <img id="hcc" class="col-8 col-sm-6 col-lg-4" src="HCC-Logo-White-footer.png" onMouseDown="popupMsg('Unable to access image')">
                 <h5 class="col-12 col-sm-12 e-co text-center">Visiting Student</h5>
                 <p class="col-12 col-sm-12 e-time text-center"><i>August 2022 - May 2023</i></p>
-                <p class="col-12 col-sm-12 e-location text-center">Medical Terminology for Health Professionals I & II, Professional Interactions in Healthcare</p>
+                <p class="col-12 col-sm-12 e-location text-center">Medical Terminology for Health Professionals I & II,</p>
+                <p class="col-12 col-sm-12 e-location text-center">Professional Interactions in Healthcare</p>
             </article>
 
             <h2 class="col-12 col-sm-12 e-titles">High School Diploma</h2>
