--- a/experience.html
+++ b/experience.html
@@ -59,20 +59,39 @@
     <main class="row">
         <section class="col-12 col-sm-12 experience">
 
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
+                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
+                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
+                    <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
+                    <li class="col-12 col-sm-12">Utilizes Adobe Photoshop and Lightroom to expertly manage the production and editing of images</li>
+                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment to achieve optimal image quality in various environmental conditions</li>
+                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions</li>
+                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving across multiple counties in North Carolina</li>
+                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to community organizations</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
+            </article>
+
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Proficient in vital sign assessment and adept at assisting patients during examinations, prioritizing comfort and well-being</li>
-                    <li class="col-12 col-sm-12">Efficiently manages medical records, schedules appointments, and addresses inquiries to maintain a smooth clinic flow</li>
-                    <li class="col-12 col-sm-12">Assists in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
-                    <li class="col-12 col-sm-12">Scribes for an otolaryngologist part-time</li>
-                    <li class="col-12 col-sm-12">Provides clear information on medications and treatment plans, offering guidance on proper self-care practices</li>
-                    <li class="col-12 col-sm-12">Serves as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
-                    <li class="col-12 col-sm-12">Ensures the cleanliness and safety of the medical office, including sterilizing equipment and maintaining a tidy work environment</li>
-                    <li class="col-12 col-sm-12">Utilizes eClinical Works for streamlined visit documentation, patient communication, and efficiency office operations</li>
+                    <li class="col-12 col-sm-12">Efficiently managed medical records, scheduled appointments, and addressed inquiries to maintain a smooth clinic flow</li>
+                    <li class="col-12 col-sm-12">Assisted in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
+                    <li class="col-12 col-sm-12">Scribed for an otolaryngologist</li>
+                    <li class="col-12 col-sm-12">Served as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
+                    <li class="col-12 col-sm-12">Ensured cleanliness and safety, including equipment sterilization and maintaining an organized work environment</li>
+                    <li class="col-12 col-sm-12">Utilized eClinicalWorks for streamlined visit documentation, patient communication, and efficienct office operations</li>
                     <li class="col-12 col-sm-12">Worked collaboratively and efficiently with a team of trained healthcare professionals to provide high-quality patient care</li>
                 </ul>
             </article>
@@ -84,39 +103,19 @@
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Marketing Manager</h4>
                 <h5 class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Develops and implements brand strategies and digital marketing campaigns, ensuring consistent representation</li>
-                    <li class="col-12 col-sm-12">Manages online social media platforms, creates engaging content, and translates medical procedures for patients</li>
-                    <li class="col-12 col-sm-12">Enhances patient experience through strategic initiatives, utilizes testimonials for marketing, and coordinates promotional events</li>
-                    <li class="col-12 col-sm-12">Works with the surgical team to convey the clinic's unique approach and monitored key performance indicators.</li>
-                    <li class="col-12 col-sm-12">Establishes local partnerships to expand the clinic's community presence</li>
+                    <li class="col-12 col-sm-12">Implemented brand strategies and developed digital marketing campaigns, ensuring consistent representation of the practice's brand</li>
+                    <li class="col-12 col-sm-12">Managed online social media platforms, created engaging content, and translated medical procedures for patients</li>
+                    <li class="col-12 col-sm-12">Enhanced patient experience through strategic initiatives, Utilized testimonials for marketing, and coordinated promotional events</li>
+                    <li class="col-12 col-sm-12">Worked with the surgical team to convey the clinic's unique approach and monitored key performance indicators.</li>
+                    <li class="col-12 col-sm-12">Established local partnerships to expand the clinic's community presence</li>
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
                 <img class="col-12 col-sm-12 col-lg-6" src="wfps.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://wenzelfacialsurgery.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Wenzel Facial Plastic Surgery</a>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
-                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Successfully manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
-                    <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
-                    <li class="col-12 col-sm-12">Utilizes Adobe Photoshop and Lightroom, to expertly manage the production and editing of images</li>
-                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment to achieve optimal image quality in various environmental conditions</li>
-                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions</li>
-                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving across multiple counties in North Carolina</li>
-                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to local charities, schools, and non-profit organizations</li>
-                </ul>
-            </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img id="saw_photo" class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
-                <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
