--- a/printing.html
+++ b/printing.html
@@ -26,16 +26,16 @@
 
 <header class="container">
     <div class="row buttons">
+        <p class="col-8 col-sm-8">If available, please choose to include background graphics to increase the the resume's legibility.</p>
         <a href="javascript:window.print()" role="button" class="btn btn-info col-7 col-sm-7 mb-3">Click to Print</a>
-        <p class="col-12 col-sm-12">If available, please choose to include background graphics to increase the the resume's legibility.</p>
-        <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Go Back</a>
+        <a href="index.html" role="button" class="btn btn-info col-7 col-sm-7 mt-3">Return to Homepage</a>
     </div>
 </header>
 <main class="container-fluid">
     <section class="row header-content pb-2">
         <h1 class="col-12 col-sm-12 text-center">Stephen Wenzel</h1>
         
-        <p class="col-12 col-sm-12 text-center mt-2">Link to my interactive, online resume: https://stephenawenzel.github.io/resume/index.html</p>
+        <p class="col-12 col-sm-12 text-center mt-2">Interactive, online resume: https://stephenawenzel.github.io/resume/index.html</p>
 
         <a class="col-6 col-sm-3 text-center" id="location">Clyde, North Carolina</a>
         <a class="col-3 col-sm-6 text-center" id="email" href="mailto:stephenawenzel@gmail.com">stephenawenzel@gmail.com</a>
@@ -64,19 +64,34 @@
         <section class="col-12 col-sm-12 group">
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
+                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
+                <p class="col-12 col-sm-12 e-time"><i>Mar. 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
+                    <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
+                    <li class="col-12 col-sm-12">Utilizes Adobe Photoshop and Lightroom to expertly manage the production and editing of images</li>
+                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment to achieve optimal image quality in various environmental conditions</li>
+                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions</li>
+                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving across multiple counties in North Carolina</li>
+                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to community organizations</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Proficient in vital sign assessment and adept at assisting patients during examinations, prioritizing comfort and well-being</li>
-                    <li class="col-12 col-sm-12">Efficiently manages medical records, schedules appointments, and addresses inquiries to maintain a smooth clinic flow</li>
-                    <li class="col-12 col-sm-12">Assists in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
-                    <li class="col-12 col-sm-12">Scribes for an otolaryngologist part-time</li>
-                    <li class="col-12 col-sm-12">Provides clear information on medications and treatment plans, offering guidance on proper self-care practices</li>
-                    <li class="col-12 col-sm-12">Serves as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
-                    <li class="col-12 col-sm-12">Ensures the cleanliness and safety of the medical office, including sterilizing equipment and maintaining a tidy work environment</li>
-                    <li class="col-12 col-sm-12">Utilizes eClinical Works for streamlined visit documentation, patient communication, and efficiency office operations</li>
+                    <li class="col-12 col-sm-12">Efficiently managed medical records, scheduled appointments, and addressed inquiries to maintain a smooth clinic flow</li>
+                    <li class="col-12 col-sm-12">Assisted in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
+                    <li class="col-12 col-sm-12">Scribed for an otolaryngologist</li>
+                    <li class="col-12 col-sm-12">Served as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
+                    <li class="col-12 col-sm-12">Ensured cleanliness and safety, including equipment sterilization and maintaining an organized work environment</li>
+                    <li class="col-12 col-sm-12">Utilized eClinicalWorks for streamlined visit documentation, patient communication, and efficienct office operations</li>
                     <li class="col-12 col-sm-12">Worked collaboratively and efficiently with a team of trained healthcare professionals to provide high-quality patient care</li>
                 </ul>
             </article>
@@ -84,37 +99,21 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Marketing Manager</h4>
                 <h5 class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - June 2024</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Develops and implements brand strategies and digital marketing campaigns, ensuring consistent representation</li>
-                    <li class="col-12 col-sm-12">Manages online social media platforms, creates engaging content, and translates medical procedures for patients</li>
-                    <li class="col-12 col-sm-12">Enhances patient experience through strategic initiatives, utilizes testimonials for marketing, and coordinates promotional events</li>
-                    <li class="col-12 col-sm-12">Works with the surgical team to convey the clinic's unique approach and monitored key performance indicators.</li>
-                    <li class="col-12 col-sm-12">Establishes local partnerships to expand the clinic's community presence</li>
-                </ul>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
-                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Successfully manages photography projects, from planning and shooting to post-processing, ensuring high-quality images</li>
-                    <li class="col-12 col-sm-12">Collaborates closely with clients, effectively capturing and showcasing their individuality within diverse environments</li>
-                    <li class="col-12 col-sm-12">Utilizes Adobe Photoshop and Lightroom, to expertly manage the production and editing of images</li>
-                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment to achieve optimal image quality in various environmental conditions</li>
-                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions</li>
-                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving across multiple counties in North Carolina</li>
-                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to local charities, schools, and non-profit organizations</li>
+                    <li class="col-12 col-sm-12">Implemented brand strategies and developed digital marketing campaigns, ensuring consistent representation of the practice's brand</li>
+                    <li class="col-12 col-sm-12">Managed online social media platforms, created engaging content, and translated medical procedures for patients</li>
+                    <li class="col-12 col-sm-12">Enhanced patient experience through strategic initiatives, Utilized testimonials for marketing, and coordinated promotional events</li>
+                    <li class="col-12 col-sm-12">Worked with the surgical team to convey the clinic's unique approach and monitored key performance indicators.</li>
+                    <li class="col-12 col-sm-12">Established local partnerships to expand the clinic's community presence</li>
                 </ul>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
-                <p class="col-12 col-sm-12 e-time"><i>May 2022 - April 2023</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>May 2022 - Apr. 2023</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12"> 
                     <li class="col-12 col-sm-12">Conducted thorough screenings of new, established, emergency, consultational, and referred patients to identify any visual impairments, eye diseases, or ocular conditions</li>
@@ -132,7 +131,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab - UNC Chapel Hill Biology Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Jan. 2022 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Critically analyzed published scientific literature to investigate the effects of drug treatments on acetylated and de-acetylated microtubules in <i>Drosophila melanogaster</i></li>
@@ -146,7 +145,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Created study aids and supplemental worksheets to help students taking the second course of organic chemistry at UNC Chapel Hill</li>
@@ -159,7 +158,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
-                <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Aug. 2021 - Apr. 2022</i></p>
                 <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Developed understanding of how cultural backgrounds, values, and ethical principles can shape people's health care decisions and behavior</li>
@@ -201,24 +200,24 @@
         <h2 class="col-12 col-sm-12 section-titles">Activities</h2>
         <section class="col-12 col-sm-12 group act-border">
             <article class="activity col-12 col-sm-3 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer & Visuals Assistant</h4>
+                <h4 class="col-12 col-sm-12 e-titles">Field Instructor & Videographer</h4>
                 <p class="col-12 col-sm-12 e-time">Tuscola High School Marching Band</p>
-                <p class="col-12 col-sm-12 e-time">July 2023 - December 2023</p>
+                <p class="col-12 col-sm-12 e-time">July 2023 - Dec. 2023</p>
             </article>
             <article class="activity col-12 col-sm-3 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Eagle Scout Volunteer - BSA</h4>
-                <p class="col-12 col-sm-12 e-time">Troop 370: Waynesville, NC</p>
-                <p class="col-12 col-sm-12 e-time">November 2022 - May 2023</p>
+                <h4 class="col-12 col-sm-12 e-titles">Scout Advancement Mentor</h4>
+                <p class="col-12 col-sm-12 e-time">BSA Troop 370: Waynesville, NC</p>
+                <p class="col-12 col-sm-12 e-time">Nov. 2022 - May 2023</p>
             </article>
             <article class="activity col-12 col-sm-3 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Red Cross Club</h4>
                 <h5 class="col-12 col-sm-12 e-co">Social Media Chair: August '21 - May '22</h5>
-                <p class="col-12 col-sm-12 e-time">Member: January 2020 to May 2022</p>
+                <p class="col-12 col-sm-12 e-time">Member: Jan. 2020 to May 2022</p>
             </article>
             <!--I added changed the col length for this because it would not start at the left. I also added margin to top.-->
             <article class="activity col-12 col-sm-3 e-about mt-1">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Swim Club</h4>
-                <p class="col-12 col-sm-12 e-time">Member from August 2018 to May 2022</p>
+                <p class="col-12 col-sm-12 e-time">Aug. 2018 to May 2022</p>
             </article>
         </section>
         <h2 class="col-12 col-sm-12 section-titles certs">Certifications</h2>
@@ -226,12 +225,12 @@
             <article class="col-12 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Healthcare - CPR/AED Certification</h4>
                 <h5 class="col-12 col-sm-12 e-co">National CPR Foundation</h5>
-                <h5 class="col-12 col-sm-12 e-co"><i>Expires March 16th, 2025</i></h5>
+                <h5 class="col-12 col-sm-12 e-co"><i>Expires Mar. 16th, 2025</i></h5>
             </article>
             <article class="col-12 col-sm-5 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Adult and Pediatric First Aid/CPR/AED Certification</h4>
                 <h5 class="col-12 col-sm-12 e-co">American Red Cross</h5>
-                <h5 class="col-12 col-sm-12 e-co"><i>Expires March 27th, 2025</i></h5>
+                <h5 class="col-12 col-sm-12 e-co"><i>Expires Mar. 27th, 2025</i></h5>
             </article>
             <article class="col-12 col-sm-3 e-about">
                 <div></div>
