--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </article>
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 mt-2 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image')">
-                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated June 2024)</p>
+                <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">INTERACTIVE ONLINE RESUME</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(August 2024 Update)</p>
             </article>
         </section>
     </main>
