--- a/experience.html
+++ b/experience.html
@@ -91,7 +91,7 @@
                     <li class="col-12 col-sm-12">Scribed for an otolaryngologist</li>
                     <li class="col-12 col-sm-12">Served as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
                     <li class="col-12 col-sm-12">Ensured cleanliness and safety, including equipment sterilization and maintaining an organized work environment</li>
-                    <li class="col-12 col-sm-12">Utilized eClinicalWorks for streamlined visit documentation, patient communication, and efficienct office operations</li>
+                    <li class="col-12 col-sm-12">Utilized eClinicalWorks for streamlined visit documentation, patient communication, and efficient office operations</li>
                     <li class="col-12 col-sm-12">Worked collaboratively and efficiently with a team of trained healthcare professionals to provide high-quality patient care</li>
                 </ul>
             </article>
